fixed bug when autocomplete could not display names (hidden by div) fixed repo switch autostrech bug some other tweeks for templates

--- a/rhodecode/public/css/style.css
+++ b/rhodecode/public/css/style.css
@@ -427,7 +427,7 @@ div.options a:hover {
 	right: 0;
 	margin: 0;
 	padding: 0;
-	width: 200px;
+	min-width: 200px;
 	display: none;
 	position: absolute;
 	background: #FFFFFF;
@@ -520,7 +520,7 @@ div.options a:hover {
 		#FFFFFF;
 	margin: 0;
 	padding: 12px 9px 7px 24px;
-	width: 167px;
+	min-width: 167px;
 }
 
 #header #header-inner #quick li ul li a.public_repo,#header #header-inner #quick li ul li a.public_repo:hover
@@ -529,7 +529,7 @@ div.options a:hover {
 		9px #FFFFFF;
 	margin: 0;
 	padding: 12px 9px 7px 24px;
-	width: 167px;
+	min-width: 167px;
 }
 
 #header #header-inner #quick li ul li a.repos,#header #header-inner #quick li ul li a.repos:hover
@@ -1187,7 +1187,6 @@ div.options a:hover {
 	height: 1%;
 	border-bottom: 1px solid #DDDDDD;
 	clear: both;
-	overflow: hidden;
 }
 
 #content div.box div.form div.fields div.field-first {
@@ -1199,10 +1198,10 @@ div.options a:hover {
 }
 
 #content div.box div.form div.fields div.field span.error-message {
-	margin: 8px 0 0 0;
+	margin: 8px 0px 0px 4px;
 	padding: 0;
 	height: 1%;
-	display: block;
+	display: inline-block;
 	color: #FF0000;
 }
 
@@ -1295,7 +1294,6 @@ div.options a:hover {
 */
 #content div.box div.form div.fields div.field div.input {
 	margin: 0 0 0 200px;
-	padding: 0;
 }
 
 #content div.box-left div.form div.fields div.field div.input,#content div.box-right div.form div.fields div.field div.input
@@ -1322,7 +1320,6 @@ div.options a:hover {
 	font-family: Lucida Grande, Verdana, Lucida Sans Regular,
 		Lucida Sans Unicode, Arial, sans-serif;
 	font-size: 11px;
-	float: left;
 }
 
 #content div.box-left div.form div.fields div.field div.input input,#content div.box-right div.form div.fields div.field div.input input
